# diskann-rust-arm64

./: ARCHITECTURE.md  AVX_SUPPORT_PLAN.md  BENCHMARKING.md  BENCHMARKS.md  CLAUDE.md  COMPILATION_GUIDE.md  COMPREHENSIVE_PARITY_TEST_PLAN.md  Cargo.toml  DISKANN_CPP_RUST_COMPARISON.md  DISKANN_RUST_CPP_PARITY_REPORT.md  DISTRIBUTEDANN_ANALYSIS.md  DOCKER_COMPOSE_DEPLOYMENT.md  FEATURE_PARITY_ANALYSIS.md  KUBERNETES_DEPLOYMENT.md  LANGUAGE_SUPPORT_PLAN.md  MODAL_DEPLOYMENT.md  PLATFORM_COMPARISON.md  README.md  STATUS.md  TESTING.md  TESTING_STRATEGY.md  bench.bat  build.bat  compare_implementations.sh  cpp_vamana_bench  cpp_vamana_bench.cpp  run_benchmarks.sh  test.bat  test_disk_index.index  test_disk_index.pq_compressed.pq_metadata.json  test_quick_disk.index  test_quick_disk.pq_compressed.pq_metadata.json
benches/: comprehensive.rs  distance.rs  graph.rs  index.rs
comparison_results/: feature_comparison.txt
diskann-sys/: Cargo.toml
examples/: README.md  advanced_features_demo.rs  basic_usage.rs  batch_optimization.rs  bench_distance_computation.rs  bench_index_build.rs  bench_npu_quick.rs  bench_search_quick.rs  benchmark.rs  benchmark_suite.rs  cold_disk_benchmark.rs  cold_disk_large_scale.rs  comprehensive_benchmark.rs  comprehensive_benchmark_report.rs  cpp_api_example.rs  disk_scalability_benchmark.rs  gpu_vs_cpu.rs  medium_scale_benchmark.rs  medoid_benchmark.rs  memory_scaling.rs  microsoft_api_example.rs  multi_gpu.rs  parallel_benchmark.rs  parallel_smoke_test.rs  performance_benchmark.rs  platform_specific_gpu.rs  pq_demo.rs  quick_disk_test.rs  real_world_datasets.rs  simd_benchmark.rs  simd_benchmark_fixed.rs  simple_disk_benchmark.rs  timing_test.rs  validation_test.rs  windowsml_npu_benchmark.rs
examples/runs/ampereARM64small/disk_benchmarks/: test_small_10000.index
examples/runs/copilotpcqualcomm/: benchmark.txt  distance_computation.txt  index_build.txt  index_build_partial.txt  npu_quick.txt  search_quick.txt  simd_benchmark.txt
examples/runs/macM2arm64/: FINAL_COMPREHENSIVE_PERFORMANCE_REPORT.md  comprehensive_benchmark_report_20250806_202428.md
include/: diskann.h
scripts/: run_comprehensive_tests.sh  setup_cpp_reference.sh
src/: lib.rs
src/cli/: benchmark.rs  build.rs  convert.rs  info.rs  mod.rs  search.rs
src/compat/: c_api.rs  cpp_api.rs  mod.rs
src/distance/: amd_fma4.rs  apple_metal.rs  arm_sve.rs  avx2.rs  avx512.rs  cuda.rs  intel_amx.rs  mod.rs  neon.rs  qualcomm_directml.rs  rocm.rs  scalar.rs  simd.rs  sse42.rs  webgpu.rs
src/distance/shaders/: cosine_distance.wgsl  dot_product.wgsl  l2_distance.wgsl  metal_distance.metal
src/formats/: mod.rs
src/graph/: frozen_tests.rs  mod.rs  parallel_tests.rs  prune.rs  search.rs  vamana.rs  vamana_fixed.rs  vamana_optimized.rs  vamana_tests.rs
src/index/: builder.rs  disk.rs  dynamic.rs  memory.rs  mod.rs
src/io/: cache.rs  direct.rs  mod.rs  reader.rs  writer.rs
src/labels/: mod.rs
src/pq/: codebook.rs  distance.rs  index.rs  kmeans.rs  mod.rs  quantizer.rs
src/search/: filtered.rs  mod.rs  range.rs
src/types/: mod.rs
src/utils/: aligned.rs  containers.rs  metrics.rs  mod.rs  numa.rs  stats.rs
test_results/: parity_report_20250806_184546.md
tests/: comprehensive_parity_tests.rs  correctness_validation.rs  integration_tests.rs  medoid_tests.rs
tests/comprehensive_parity/: comparison_framework.rs  cpp_integration.rs  mod.rs  reporting.rs  test_data.rs  tier1_foundational.rs  tier2_robustness.rs  tier3_performance.rs
